k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: first-web-pod
  labels:
    app: first-web
spec:
  containers:
    - name: web
      image: my-web-app:latest
      imagePullPolicy: IfNotPresent
      # imagePullPolicy: Never
      ports:
        - containerPort: 8080
