k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: first-web-service
spec:
  selector:
    app: first-web
  ports:
    - port: 8080
      targetPort: 8080
