k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: web
  name: frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: first-web-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - hostname: localhost
